<resources>
    <string name="app_name">Splinter</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_bill">Add Bill</string>
    <string name="title_activity_login">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Splinter</string>
    <string name="nav_header_subtitle">splinter@splinter.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="currency">Currency</string>
    <string name="action_share">Share</string>
    <string name="profile">Profile</string>
    <string name="contact_us">Contact us</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="logging_out">Logging out</string>
    <string name="owes_you">You Get</string>
    <string name="owed_you">You owe</string>
    <string name="zero">0</string>
    <string name="bill_name">Bill Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="create_account">Create an Account</string>
    <string name="logout">Logout</string>
    <string name="error_in_user_creation">Error in User creation! Try Again!</string>
    <string name="no_empty_field">Field cannot be empty</string>
    <string name="back_again_to_exit">Please click BACK again to exit</string>
    <string name="myname">johndoe</string>
    <string name="useremail">johndoe@example.com</string>
    <string name="fname">John</string>
    <string name="lname">Doe</string>
    <string name="profile_edit">Edit</string>
    <string name="title_activity_profile">Profile</string>
    <string name="accountinfo">Account Info</string>
    <string-array name="list_faqs">
        <item>Introduction</item>
        <item>How to create a bill</item>
        <item>How to add participants</item>
    </string-array>
    <string name="default_currency"> Default currency is based on your location (Canada)</string>
    <string name="help_Text">FAQs</string>
    <string name="currency_selection"> Please select the currency below to change: </string>
    <string name="amount_total">Total balance:</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_share">share</string>
    <string name="present_location">Location: </string>
    <string name="place_currency">Currency:</string>
    <string-array name="country_code">
        <item>+1</item>
        <item>+91</item>
    </string-array>
    <string-array name="currency">
        <item>Canada(CAD)</item>
        <item>USA(USD)</item>
        <item>India(INR)</item>
        <item>UK (Euro)</item>
    </string-array>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_help_content">FAQ"s</string>
    <string name="help_intro">Introduction</string>
    <string name="help_bill">How to create a bill</string>
    <string name="help_add_particip">How to add participants</string>
    <string name="help_intro_sol"> Splinter is a bill sharing application which has modules like adding bills, adding items to the bill, adding participants to the bill</string>
    <string name="help_bill_sol"> Please click on the + button on bottom right corner to create a bill</string>
    <string name="help_add_particip_sol"> please click on the top right icon to add participants to the bill in bill creation page</string>
</resources>
