<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.splinter.MainMenu.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.splinter.MainMenu.profile.profile"
        android:label="@string/profile"
        tools:layout="@layout/profile_fragment" />
    
    <fragment
        android:id="@+id/nav_currency"
        android:name="com.example.splinter.MainMenu.currency.currency"
        android:label="@string/currency"
        tools:layout="@layout/currency_fragment" />
    
    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.splinter.MainMenu.contact_us.contact_us"
        android:label="@string/contact_us"
        tools:layout="@layout/contact_us_fragment" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.splinter.MainMenu.logout.logout"
        android:label="@string/logout" />

</navigation>