<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Help_content"
    tools:showIn="@layout/activity_help_content">

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_intro"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/intro_solution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro"
        android:text="@string/help_intro_sol"
        android:textSize="20dp"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/help_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro_solution"
        android:text="@string/help_bill"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/help_bill_sol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help_bill"
        android:text="@string/help_bill_sol"
        android:textSize="20dp"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/help_add_particip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help_bill_sol"
        android:text="@string/help_add_particip"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_margin="5dp"/>
    <TextView
        android:id="@+id/help_add_particip_sol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help_add_particip"
        android:text="@string/help_add_particip_sol"
        android:textSize="20dp"
        android:layout_margin="5dp"/>

</RelativeLayout>