<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:windowSoftInputMode="adjustPan"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textSize="30sp" />
        <Button
            android:id="@+id/addBillButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Bill"
            android:layout_alignParentRight="true"></Button>

        <Button
            android:id="@+id/addParticipantButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Participant"
            android:layout_toLeftOf="@+id/addBillButton"></Button>


        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="50dp"
            android:id="@+id/listview1"></ListView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/tv_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:scrollHorizontally="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/inputLayout_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"

        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:scrollHorizontally="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLayout_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/tv_createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:linksClickable="true"
        android:text="@string/create_an_account"
        android:textColor="@color/colorBlue" />

</RelativeLayout>