<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.currency.currency">
    <TextView
        android:id="@+id/default_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="24dp"
        android:text="@string/default_currency"/>

    <TextView
        android:id="@+id/present_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/default_currency"
        android:text="@string/present_location"
        android:layout_marginLeft="10dp"
        android:layout_centerHorizontal="false"
        android:textSize="24dp" />
    <TextView
        android:id="@+id/user_current_location"
        android:layout_below="@+id/default_currency"
        android:layout_toRightOf="@+id/present_location"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/select_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/user_current_location"
        android:textSize="24dp"
        android:text="@string/currency_selection"/>
<!--    <Spinner-->
<!--        android:id="@+id/currencyspinner"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/select_period"/>-->

    <ListView
        android:layout_margin="10dp"
        android:layout_below="@+id/select_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/currency">

    </ListView>

</RelativeLayout>
