<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/home_owes_you"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/owes_you"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/home_owes_you_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_toRightOf="@+id/home_owes_you"
                    android:text="0"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/home_owed_you"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/home_owes_you"
                    android:layout_marginLeft="10dp"
                    android:text="@string/owed_you"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/home_owed_you_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/home_owes_you_amount"
                    android:layout_marginLeft="22dp"
                    android:layout_toRightOf="@id/home_owed_you"
                    android:text="0"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/home_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/home_owed_you"
                    android:layout_marginLeft="10dp"
                    android:text="@string/amount_total"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/home_total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/home_owed_you_amount"
                    android:layout_marginLeft="120dp"
                    android:layout_toRightOf="@id/home_total"
                    android:text="0"
                    android:textSize="20dp" />
            </RelativeLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <include
        layout="@layout/home_screen_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>